objects/Discount_Rules__mdt.object
<CustomObject>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sports</fullName>
                    <default>true</default>
                    <label>Sports</label>
                </value>
                <value>
                    <fullName>Cloths</fullName>
                </value>
                <value>
                    <fullName>Home Furniture</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Validity__c</fullName>
        <label>Product Validity</label>
        <type>Date</type>
    </fields>
    <label>Discount Rules</label>
    <pluralLabel>Discount Rules</pluralLabel>
</CustomObject>